<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NameMemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="importDrawable">Import</string>
    <string name="gewusst">Ja</string>
    <string name="nichtgewusst">Nein</string>
    <string name="name_anzeigen">Name anzeigen</string>
    <string name="addExamples">Einträge zur Datenbank hinzugügen</string>
    <string name="deleteDialogTitle">Glückwunsch!</string>
    <string name="dialogPositive">Ja</string>
    <string name="dialogNegative">Nein</string>
    <string name="dialogBack">Zurück</string>
    <string name="dialogCancel">Abbrechen</string>
    <string name="captureImage">Neues Bild aufnehmen</string>
    <string name="dialogOk">Okay</string><!-- not used -->
    <string name="infoDialogTitle">Appinfo</string>
    <string name="infoDialog">
        Namenlern App
        \nAutor: Leander Dreier
        \nVersion: indev
        \nKontakt: leander.dreier@googlemail.com
    </string>
    <string name="mfileDialogTitle">Datei nicht gefunden!</string>
    <string name="nPicDialogTitle">Neues Bild aufgenommen</string>
    <string name="nPicDialogTitle2">Neues Bild hinzugefügt!</string>
    <string name="nPicDialogMessage">Geben Sie den Namen ein der diesem Bild zugeordnet werden soll!</string>
    <string name="cleanProject">Verbrannte Erde</string>
    <string name="addNewPic">Neues Bild aus Datei hinzufügen</string>
    <string name="queryPairedBtTitle">Gekoppelte Geräte:</string>
    <string name="notInList">Das gesuchte Gerät ist nicht in der Liste</string>
    <string name="discoveryBtTitle">Gefundene Geräte:</string>
    
</resources>
